[package]
authors = ["vmalloc"]
description = "Library for runtime configuration management"
edition = "2018"
homepage = "https://github.com/vmalloc/figure"
license = "Apache-2.0"
name = "figure"
readme = "README.md"
repository = "https://github.com/vmalloc/figure"
version = "0.0.4"

[dependencies]
anyhow = "1.0.42"
json-patch = "0.2.6"
log = "0.4.14"
parking_lot = "0.11.1"
serde = "1.0.126"
serde_json = "1.0.64"
serde_yaml = "0.8.17"

[dev-dependencies]
serde = {version = "1", features = ["derive"]}
tempfile = "3.2"
