[package]
authors = ["vmalloc"]
description = "Library for runtime configuration management"
edition = "2018"
homepage = "https://github.com/vmalloc/figure"
license = "Apache-2.0"
name = "figure"
readme = "README.md"
repository = "https://github.com/vmalloc/figure"
version = "0.1.1"

[dependencies]
anyhow = "1.0.42"
json-patch = "0.2.6"
log = "0.4.14"
parking_lot = "0.11.1"
reqwest = {version = "0.11.10", features = ["json", "blocking"]}
serde = "1.0.126"
serde_json = "1.0.64"
serde_yaml = "0.8.17"

[dev-dependencies]
axum = "0.5.4"
serde = {version = "1", features = ["derive"]}
tempfile = "3.2"
tokio = {version = "1.18.2", features = ["rt", "rt-multi-thread"]}
